2014-07-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (idebug): allow multi-char patterns as debug id [Lama]

2013-01-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (tkcon show): catch deiconify as it will throw an
	error if tkcon is embedded.

2012-12-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (edit): add support for ::tkcon::OPT(tabspace) to
	adjust tab spacing in edit window (default: 8). [Bug #7]

	* tkcon.tcl (::tkcon::Bindings): minimal patch for 8.6b3+ event
	compatibility. Larger patch to come that addresses shift towards
	virtual events in core widgets. [Bug #48] (gollwitzer)

	* docs/{dump.man,tkcon.1.man,tkconc.5.man}: make dtplite happy for
	the docs [Bug #47]

	* tkcon.tcl (::tkcon::Init): update to use latest /viewvc/tkcon
	url to retrieve head version of tkcon.

	* tkcon.tcl (::tkcon::InitUI): catch deiconify to prevent error
	when embedding. [Bug #44]

	* tkcon.tcl (::tkcon::ExpandMethodname): improved expansion for
	xotcl methods.  Also enhance expansion to allow break/continue
	signals to differentiate "I'm not responsible" results from "I
	don't have any results". (neumann)

	* tkcon.tcl (::tkcon::InitInterp): correct sending tkcon commands
	to user created interps [Bug #42] (kuhn)

2012-03-06  Jeff Hobbs  <jeffh@>

	* tkcon.tcl (idebug): better line handling to not use list
	functions. [Bug 111462] (goth)
	(tkcon): pass any init args to 'tkcon show'

2011-10-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* pkgIndex.tcl: update to v2.7
	* tkcon.tcl:    Improve UI to work on OS X.  Adjust some dialogs,
	use Command- instead of Control- bindings on OS X.  Handle right
	click properly.

	* docs/license.terms: removed outdated restricted rights section.

2010-01-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* icons/*:                Added an SVG icon and .desktop file suitable
	* tkcon-console.desktop:  for use installing tkcon into the desktop
	* install-desktop-menu.sh: menus on a unix desktop. Also an install